--- a/assets/main.css
+++ b/assets/main.css
@@ -68,7 +68,7 @@
     max-width: 220px;
 }
 
-.ui.vertical.stripe p {
+.ui.vertical.stripe p, .ui.vertical.stripe .item {
     font-size: 1.33em;
 }
 
@@ -98,7 +98,7 @@
         margin-top: 0em;
         font-size: 1.2em;
     }
-    .ui.vertical.stripe p {
+    .ui.vertical.stripe p, .ui.vertical.stripe .item {
         font-size: 1.15em;
     }
     .stackable.cards.link {
